Refactor mappers and add update method on residential complex